--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES6",                   // Set the ECMAScript target version
-    "module": "commonjs",              // Set the module code generation method (use "commonjs" for Node.js projects)
+    "module": "ES6",              // Set the module code generation method (use "commonjs" for Node.js projects)
     "outDir": "./dist",                // Redirect output structure to the directory
     "rootDir": "./src",                // Specify the root directory of input files
     "strict": true,                    // Enable all strict type-checking options
